fixing footer align

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -44,6 +44,7 @@ li.p-name{
 }
 
 .social-media-list{
+    float: right;
     line-height: 0px;
 }
 
